Finished information section

--- a/index.html
+++ b/index.html
@@ -36,17 +36,39 @@
                 </button>
             </div>
             <div class="hero-img">
-                <img src="./image.jpg" alt="saffron">
+                <img src="./image.jpg" alt="">
             </div>
         </div>
 
     </div>
 
-    <div class="content">
+    <div class="info-section">
+        <div class="info-header">Some random information.</div>
 
+        <div class="info-content">
+            <div class="info-box">
+                <div class="box-img"><img src="./image2.jpg"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+
+            <div class="info-box">
+                <div class="box-img"><img src="./image3.jpg"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+
+            <div class="info-box">
+                <div class="box-img"><img src="./image2.jpg"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+
+            <div class="info-box">
+                <div class="box-img"><img src="./image3.jpg"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
 
-    <div class="quotes">
+    <div class="quotes-section">
 
     </div>
 
