--- a/index.html
+++ b/index.html
@@ -69,11 +69,22 @@
     </div>
 
     <div class="quotes-section">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it ooks nice.</div>
+        <div class="author"> - Thor, God of Thunder</div>
+    </div>
 
+    <div class="action-section">
+        <div class="action-box">
+            <div class="action-text">
+                <div class="action-header">Call to action! It's time!</div>
+                <div class="action-subtext">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="action-button">Sign up</button>
+        </div>
     </div>
 
     <div class="footer">
-
+        <div class="footer-text">Copyright © The Odin Project 2022</div>
     </div>
     
 </body>
